--- a/scratch.html
+++ b/scratch.html
@@ -29,7 +29,7 @@
         </ol>
         <br>
         <h2>Picture of a Core Memory</h2>
-        <img src="../startbootstrap-clean-blog-gh-pages/Images/IMG_8773.PNG" alt="D&D">
+        <img src="../startbootstrap-clean-blog-gh-pages/Images/IMG_8773.PNG" alt="Parking Lot Shenanigans">
         <br>
         <h2>Fun Music Video</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LgmxMuW6Fsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
